Fix spacing on contact btns

--- a/base/_base.scss
+++ b/base/_base.scss
@@ -1266,12 +1266,12 @@ a.card-double:active {
 @media (max-width: 800px) {
   .card.contact .phone {
     top: 0.5rem;
-    left: -2.25rem;
+    left: -2rem;
   }
 
   .card.contact .email {
     top: 0.5rem;
-    right: -2.25rem;
+    right: -2rem;
   }
 }
 /*-------------------------------------*/
