--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -1617,12 +1617,12 @@ a.card-double .content {
 @media (max-width: 800px) {
   .card.contact .phone {
     top: 0.5rem;
-    left: -2.25rem;
+    left: -2rem;
   }
 
   .card.contact .email {
     top: 0.5rem;
-    right: -2.25rem;
+    right: -2rem;
   }
 }
 /*-------------------------------------*/
